syntax = "proto3";

package io.harness.eventsframework.connector;
import "google/protobuf/wrappers.proto";

option java_multiple_files = true;

message ConnectorEntityChangeDTO {
  google.protobuf.StringValue identifier = 1;
  google.protobuf.StringValue accountIdentifier = 2;
  google.protobuf.StringValue orgIdentifier = 3;
  google.protobuf.StringValue projectIdentifier = 4;
}